[tool.poetry]
name = "ScopeSim"
version = "0.10.1a4"
description = "Generalised telescope observation simulator"
license = "GPL-3.0-or-later"
authors = ["Kieran Leschinski <kieran.leschinski@unive.ac.at>"]
maintainers = [
    "Kieran Leschinski <kieran.leschinski@unive.ac.at>",
    "Hugo Buddelmeijer <hugo@buddelmeijer.nl>",
    "Fabian Haberhauer <fabian.haberhauer@univie.ac.at>",
]
readme = "README.md"
repository = "https://github.com/AstarVienna/ScopeSim"
documentation = "https://scopesim.readthedocs.io/en/latest/"
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^1.26.4"
scipy = "^1.15.3"
astropy = "^6.1.7"
matplotlib = "^3.10.1"
pooch = "^1.8.2"

docutils = "^0.19"
httpx = ">=0.28.1"
beautifulsoup4 = "^4.13.3"
lxml = "^5.2.2"
pyyaml = "^6.0.1"
more-itertools = "^10.2.0"
tqdm = "^4.66.5"
packaging = ">=23.2"

synphot = "^1.6.0"
skycalc-ipy = ">=0.5.3"
anisocado = ">=0.3.0"
astar-utils = ">=0.3.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
jupytext = "^1.17.2"
ipykernel = "^6.30.0"
ipympl = "^0.9.7"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.2.1"
scopesim_templates = ">=0.6.2"
ipykernel = "^6.30.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.3.7"
sphinx-book-theme = "^1.1.4"
jupyter-sphinx = ">=0.5.3"
sphinx-copybutton = "^0.5.2"
myst-nb = "^1.3.0"
sphinxcontrib-apidoc = ">=0.6.0"
sphinxcontrib-mermaid = "^1.0.0"
nbsphinx = "^0.9.7"
numpydoc = "^1.9.0"
scopesim_templates = ">=0.6.2"
ipykernel = "^6.30.0"
ipympl = "^0.9.7"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/AstarVienna/ScopeSim/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--strict-markers -m 'not webtest(github=True)'"
markers = [
    "webtest: marks tests as requiring network (deselect with '-m \"not webtest\"')",
    "webtest_github: marks tests that download from GitHub (select with '-m \"webtest_github\"')",
    "slow: marks tests that take a while (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    "error",
    # Should probably be fixed:
    "ignore::ResourceWarning",
    "ignore:The fit may be poorly conditioned:astropy.utils.exceptions.AstropyUserWarning",
    "ignore::astropy.units.core.UnitsWarning",
    # Perhaps fix?
    "ignore:divide by zero encountered in scalar divide:RuntimeWarning",
    "ignore:divide by zero encountered in double_scalars:RuntimeWarning",
    "ignore:invalid value encountered in multiply:RuntimeWarning",
    "ignore:invalid value encountered in divide:RuntimeWarning",
    "ignore:Cannot merge meta key.*:astropy.utils.metadata.MergeConflictWarning",
    "ignore::astropy.wcs.wcs.FITSFixedWarning",
    "default:The fov_grid*:DeprecationWarning",
    # Raised when saving fits files, not so important to fix:
    "ignore:.*a HIERARCH card will be created.*:astropy.io.fits.verify.VerifyWarning",
    # Web-related issues, fix at some point
    "ignore:'urllib3.contrib.pyopenssl'*:DeprecationWarning",
    "ignore:Blowfish*:UserWarning",
    "ignore:TripleDES*:UserWarning",
    # Not sure what that is but it's everywhere...
    "ignore:'cgi'*:DeprecationWarning",
    "ignore:The py23*:DeprecationWarning",
    "ignore:datetime.datetime.utcfromtimestamp()*:DeprecationWarning",
    # Pytest Notebook stuff
    "ignore:Proactor*:RuntimeWarning",
    # lxml warning introduced by beautifulsoup
    "ignore:The 'strip_cdata' option of HTMLParser*:DeprecationWarning",
    # Suddenly appears from Pillow in a few tests
    "ignore:'mode' parameter is deprecated and will be removed*:DeprecationWarning"
]

[tool.coverage.report]
omit = ["scopesim/tests/*", "docs/*"]

[tool.pylint.main]
ignored-classes = "astropy.units"
fail-under = 8
output-format = "colorized"
ignore-paths = "scopesim.tests"
